Fix router